--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -14,4 +14,4 @@
   <hr>
 {{/each}}
 
-<div class="footer">Made by <a href="http://twitter.com/gcollazo">@gcollazo</a> from <a href="http://blimp.io">Blimp</a></div>
+<div class="footer">Made by <a href="http://twitter.com/gcollazo">@gcollazo</a> from <a href="http://blimp.io">Blimp</a>.</div>
