Adds tweet button

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,4 +1,4 @@
-<h1>ember-cli addons on npm</h1>
+<h1>ember-cli addons on npm {{partial "partials/tweet"}}</h1>
 <p class="count">Packages: {{packageCount}}</p>
 
 {{input type="text" value=query placeholder="Filter addons" autofocus="autofocus"}}
