--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -6,6 +6,12 @@ html, body {
   margin: 20px;
 }
 
+.twitter-button-wrapper {
+  position: absolute;
+  top: 40px;
+  right: 40px;
+}
+
 .branding {
   font-size: 62px;
   font-weight: 100;
@@ -32,6 +38,10 @@ input[type=text] {
 
 .name:hover {
   text-decoration: underline;
+}
+
+.package-wrapper:hover {
+  background-color: #fafafa;
 }
 
 .count {
@@ -82,16 +92,15 @@ input[type=text] {
   height: 30px;
 }
 
-.twitter-button-wrapper {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-}
-
 
 
 /* xs */
 @media (min-width: 0px) and (max-width: 767px) {
+  .twitter-button-wrapper {
+    top: 10px;
+    right: 10px;
+  }
+
   .branding {
     font-size: 32px;
   }
