--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -8,7 +8,7 @@
   <a href="{{unbound npmLink}}" target="_blank" class="package-link">
     <div class="package-wrapper">
       <div class="left-column">
-        <div class="name">{{unbound name}}</div>
+        <div class="name">{{unbound name}}<br class="visible-xs"><img src="{{unbound travisBadgeURL}}" onerror="this.style.display='none'" class="travis-badge"></div>
         <div class="description">{{unbound doc.description}}</div>
       </div>
       <div class="right-column">
