--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -5,19 +5,17 @@
 {{input type="text" value=query placeholder="Filter addons" autofocus="autofocus"}}
 
 {{#each filteredContent itemController="package"}}
-  <a href="{{unbound npmLink}}" target="_blank" class="package-link">
-    <div class="package-wrapper">
-      <div class="left-column">
-        <div class="name">{{unbound name}}<br class="visible-xs"><img src="{{unbound travisBadgeURL}}" onerror="this.style.display='none'" class="travis-badge"></div>
-        <div class="description">{{unbound doc.description}}</div>
-      </div>
-      <div class="right-column">
-        <img src="{{unbound gravatarURL}}" class="gravatar"> {{unbound doc._npmUser.name}}<br>
-        Modified: {{unbound relative-time doc.time.modified}}<br>
-        Downloads: {{unbound doc.downloads.downloads}}
-      </div>
+  <div class="package-wrapper">
+    <div class="left-column">
+      <div><a href="{{unbound npmLink}}" target="_blank" class="package-link">{{unbound name}}</a><br class="visible-xs"><img src="{{unbound travisBadgeURL}}" onerror="this.style.display='none'" class="travis-badge"></div>
+      <div class="description">{{unbound doc.description}}</div>
     </div>
-  </a>
+    <div class="right-column">
+      <img src="{{unbound gravatarURL}}" class="gravatar"> {{unbound doc._npmUser.name}}<br>
+      Modified: {{unbound relative-time doc.time.modified}}<br>
+      Downloads: {{unbound doc.downloads.downloads}} / month
+    </div>
+  </div>
 {{else}}
   <p class="not-found">Nothing found for "{{query}}"</p>
   <hr>
