--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,5 @@
 <div class="twitter-button-wrapper">{{partial "partials/tweet"}}</div>
-<h1 class="branding">Ember CLI Addons</h1>
+<h1 class="branding">Ember Addons</h1>
 <p class="count">Packages: {{packageCount}}</p>
 
 {{input type="text" value=query placeholder="Filter addons" autofocus="autofocus"}}
