Change data URL

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -8,12 +8,12 @@
   <div class="package-wrapper">
     <div class="left-column">
       <div><a href="{{unbound npmLink}}" target="_blank" class="package-link">{{unbound name}}</a><br class="visible-xs"><img src="{{unbound travisBadgeURL}}" onerror="this.style.display='none'" class="travis-badge"></div>
-      <div class="description">{{unbound doc.description}}</div>
+      <div class="description">{{unbound description}}</div>
     </div>
     <div class="right-column">
-      <img src="{{unbound gravatarURL}}" class="gravatar"> {{unbound doc._npmUser.name}}<br>
-      Modified: {{unbound relative-time doc.time.modified}}<br>
-      Downloads: {{unbound doc.downloads.downloads}} / month
+      <img src="{{unbound gravatarURL}}" class="gravatar"> {{unbound _npmUser.name}}<br>
+      Modified: {{unbound relative-time time.modified}}<br>
+      Downloads: {{unbound downloads.downloads}} / month
     </div>
   </div>
 {{else}}
