--- a/app/templates/loading.hbs
+++ b/app/templates/loading.hbs
@@ -1,1 +1,7 @@
-<h1>Loading...</h1>
+<div class="container container-loading">
+  <div class="row">
+    <div class="col-sm-12">
+      <h3 class="loading">Loading modules...</h3>
+    </div>
+  </div>
+</div>
