--- a/app/templates/-footer.hbs
+++ b/app/templates/-footer.hbs
@@ -1,8 +1,10 @@
 <div class="container container-footer">
-  <div class="col-sm-12">
-    Made by
-    <a href="http://twitter.com/gcollazo">@gcollazo</a>
-    from
-    <a href="http://blimp.io">Blimp</a>.
+  <div class="row">
+    <div class="col-sm-12">
+      Made by
+      <a href="http://twitter.com/gcollazo">@gcollazo</a>
+      from
+      <a href="http://blimp.io">Blimp</a>.
+    </div>
   </div>
 </div>
