Hide top navigation on xs

--- a/app/templates/-header.hbs
+++ b/app/templates/-header.hbs
@@ -1,11 +1,11 @@
 <header>
     <div class="container">
       <div class="row">
-        <div class="col-sm-6">
+        <div class="col-xs-12 col-sm-6">
         <h1 class="branding">Ember Addons</h1>
         <div class="header-subtitle">Listing {{#if packageCount}}{{packageCount}}{{else}}hundreds of{{/if}} modules that extend ember-cli.</div>
       </div>
-      <div class="col-sm-6">
+      <div class="col-sm-6 hidden-xs">
         <ul class="list-inline pull-right">
           <li><a href="https://github.com/gcollazo/ember-cli-addon-search" class="top-menu-link">Fork us</a></li>
           <li>
