Fix footer padding

--- a/app/templates/-footer.hbs
+++ b/app/templates/-footer.hbs
@@ -1,6 +1,6 @@
-<div class="container container-footer">
+<div class="container">
   <div class="row">
-    <div class="col-sm-12">
+    <div class="col-sm-12 container-footer">
       Made by
       <a href="http://twitter.com/gcollazo">@gcollazo</a>
       from
