--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -20,8 +20,7 @@ header {
   padding: 20px 0 30px 0;
 }
 
-.container-loading,
-.container-footer {
+.container-loading {
   text-align: center;
   padding: 50px 0;
 }
@@ -31,6 +30,8 @@ header {
 }
 
 .container-footer {
+  text-align: center;
+  padding: 50px 0;
   font-size: 13px;
   color: #7f7f7f;
   border-top: 1px solid #d5d5d5;
