Fix mobile issue with description word breaking

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -31,9 +31,9 @@
                 <a href="{{unbound npmLink}}"
                    target="_blank"
                    class="package-link">{{unbound name}}</a>
-                <br>
-                {{unbound description}}
-                <br>
+                <div class="description">
+                  {{unbound description}}
+                </div>
                 <img src="{{unbound travisBadgeURL}}"
                      onerror="this.style.display='none'"
                      class="travis-badge">
