--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -109,6 +109,7 @@ header {
 
 .list-package-details > li {
   background-color: #e6e6e6;
+  margin-bottom: 3px;
 }
 
 .not-found {
@@ -123,3 +124,27 @@ header {
   position: relative;
   top: 3px;
 }
+
+/* xs */
+@media (min-width: 0px) and (max-width: 767px) {
+ .branding {
+  font-size: 47px;
+ }
+ .header-subtitle {
+  font-size: 14px;
+ }
+
+ .description  {
+  word-wrap: break-word;
+  width: 270px;
+ }
+}
+
+/* sm */
+@media (min-width: 768px) and (max-width: 991px) {}
+
+/* md */
+@media (min-width: 992px) and (max-width: 1199px) {}
+
+/* lg */
+@media (min-width: 1200px) {}
