Make menu links visible
Changes for 00d65b5c41bd07ebfd4ba0c672258cd8cf0690a6 made the links in
the header invisible.  This makes them visible again.

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -52,8 +52,8 @@ a, a:hover, a:active, a:visited {
   color: #6b1210;
 }
 
-.top-menu-link,
-.top-menu-link:hover {
+a.top-menu-link,
+a.top-menu-link:hover {
   color: #6b1210;
   font-size: 18px;
 }
