--- a/app/templates/-header.hbs
+++ b/app/templates/-header.hbs
@@ -8,6 +8,7 @@
       <div class="col-sm-6 hidden-xs">
         <ul class="list-inline pull-right">
           <li><a href="https://github.com/gcollazo/ember-cli-addon-search" class="top-menu-link">Fork us</a></li>
+          <li><a href="http://feeds.feedburner.com/EmberAddons" class="top-menu-link">RSS</a></li>
           <li class="twitter-badge-list-item">
             <a href="https://twitter.com/share" class="twitter-share-button top-menu-link" data-url="http://addons.builtwithember.io/" data-text="ember-cli addon search" data-related="BuiltWithEmber" data-count="none" data-hashtags="emberjs">Tweet</a>
             <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
