Move new badge next to name

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -109,10 +109,11 @@ a.top-menu-link:hover {
 .new-package {
   display:inline-block;
   background-color: #ea3723;
-  margin-bottom: 3px;
   font-size: 11px;
   color:white;
   padding:1px 4px;
+  position: relative;
+  top: -4px;
 }
 
 .list-package-details {
