--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-sm-12">
         {{input type="text"
-                value=query
+                value=queryProxy
                 placeholder="Filter addons"
                 class="form-control search-field"
                 autofocus="autofocus"}}
