--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -65,6 +65,10 @@ a.top-menu-link:hover {
   background-color: rgba(255, 255, 255, 0.6);
 }
 
+input[type="search"]::-webkit-search-cancel-button {
+  -webkit-appearance: searchfield-cancel-button;
+}
+
 .table th {
   font-size: 12px;
 }
