--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-12">
-        {{input type="text"
+        {{input type="search"
                 value=query
                 placeholder="Filter addons"
                 class="form-control search-field"
