--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-sm-12">
         {{input type="search"
-                value=queryValue
+                value=query
                 placeholder="Filter addons"
                 class="form-control search-field"
                 autofocus="autofocus"}}
@@ -61,7 +61,7 @@
           {{else}}
             <tr>
               <td colspan="4">
-                <p class="not-found">Nothing found for "{{queryValue}}"</p>
+                <p class="not-found">Nothing found for "{{query}}"</p>
               </td>
             </tr>
           {{/each}}
