Re-integrated the delay which has been lost in the middle of the refactor

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-sm-12">
         {{input type="search"
-                value=query
+                value=inputQuery
                 placeholder="Filter addons"
                 class="form-control search-field"
                 autofocus="autofocus"}}
