--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -100,6 +100,7 @@ input[type="search"]::-webkit-search-cancel-button {
 
 .gravatar {
   border-radius: 50%;
+  margin-right: 5px;
 }
 
 .package-link {
