Add and use helper to split names by prefix, and add a style to fade ember- and ember-cli- prefixes so as to make the main part of the name easier to scan

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -15,6 +15,10 @@ a, a:hover, a:active, a:visited {
   color: #ea3723;
 }
 
+a span.name-prefix {
+  opacity: 0.33;
+}
+
 .search-wrapper {
   background-color: #ea3723;
   padding: 20px 0 30px 0;
