--- a/app/templates/packages/list.hbs
+++ b/app/templates/packages/list.hbs
@@ -39,7 +39,7 @@
               <td class="cell-name">
                 <a href="{{unbound npmUrl}}"
                    target="_blank"
-                   class="package-link">{{unbound name}}</a>
+                   class="package-link">{{split-prefix name}}</a>
                 {{#unboundIf isNew}}
                   <div class="new-package">NEW</div>
                 {{/unboundIf}}
