Move travis badge to float right and fade it a bit

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -178,3 +178,11 @@ table.table-packages > tbody > tr.hidden {
 img.-eic-loading, img.-eic-error {
   display: none;
 }
+
+img.travis-badge {
+  position: relative;
+  float: right;
+  top: 8px;
+  left: -10px;
+  opacity: 0.6;
+}
