Adds loading spinner

--- a/app/templates/packages/list.hbs
+++ b/app/templates/packages/list.hbs
@@ -71,7 +71,7 @@
             <td colspan="5">
               <p class="not-found">
                 {{#if isFiltering}}
-                  Filtering modules...
+                  <img src="images/spinner.gif">
                 {{else}}
                   Nothing found for "{{searchInput}}"
                 {{/if}}
