--- a/app/templates/packages/loading.hbs
+++ b/app/templates/packages/loading.hbs
@@ -1,7 +1,7 @@
 <div class="container container-loading">
   <div class="row">
     <div class="col-sm-12">
-      <h3 class="loading">Loading modules...</h3>
+      <img src="images/spinner.gif">
     </div>
   </div>
 </div>
