Fix footer. Give credit to contributors.

--- a/app/templates/-footer.hbs
+++ b/app/templates/-footer.hbs
@@ -4,7 +4,9 @@
       Made by
       <a href="http://twitter.com/gcollazo">@gcollazo</a>
       from
-      <a href="http://blimp.io">Blimp</a>.
+      <a href="http://blimp.io">Blimp</a>.<br>
+      Contributions by the
+      <a href="https://github.com/gcollazo/ember-cli-addon-search/graphs/contributors">Ember.js community</a>.
     </div>
   </div>
 </div>
