--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,185 +1,7 @@
-* {
-  box-sizing: border-box;
+html, body {
+  margin: 20px;
 }
 
-body {
-  font-size: 16px;
-}
-
-header {
-  background-color: #ea3723;
-  padding: 50px 0 0 0;
-}
-
-a, a:hover, a:active, a:visited {
-  color: #ea3723;
-}
-
-a span.name-prefix {
-  opacity: 0.33;
-}
-
-.search-wrapper {
-  background-color: #ea3723;
-  padding: 20px 0 30px 0;
-}
-
-.container-loading {
-  text-align: center;
-  padding: 50px 0;
-}
-
-.loading {
-  color:#7f7f7f;
-}
-
-.container-footer {
-  text-align: center;
-  padding: 50px 0;
-  font-size: 13px;
-  color: #7f7f7f;
-  border-top: 1px solid #d5d5d5;
-}
-
-.branding {
-  color: white;
-  font-weight: 100;
-  margin:0;
-  font-size: 50px;
-}
-
-.header-subtitle {
-  color: #6b1210;
-}
-
-a.top-menu-link,
-a.top-menu-link:hover {
-  color: #6b1210;
-  font-size: 18px;
-}
-
-.search-field {
-  border-radius: 0;
-  border: 0;
-  font-size: 20px;
-  height: 60px;
-}
-
-.search-field[disabled=disabled] {
-  background-color: rgba(255, 255, 255, 0.6);
-}
-
-input[type="search"]::-webkit-search-cancel-button {
-  -webkit-appearance: searchfield-cancel-button;
-}
-
-.table th {
-  font-size: 12px;
-}
-
-.cell-name,
-.cell-gravatar,
-.cell-downloads,
-.cell-updated,
-.cell-travis {
-  vertical-align: middle !important;
-  color: #7f7f7f;
-}
-
-.cell-name {
-  padding: 8px 8px 15px 8px !important;
-}
-
-.cell-gravatar {
-  width: 220px;
-}
-
-.cell-downloads,
-.cell-updated {
-  width: 130px;
-}
-
-.table-packages {
-  margin-top: 20px;
-}
-
-.gravatar {
-  border-radius: 50%;
-  margin-right: 5px;
-}
-
-.package-link {
-  font-size: 24px;
-}
-
-.new-package {
-  display:inline-block;
-  background-color: #ea3723;
-  font-size: 11px;
-  color:white;
-  padding:1px 4px;
-  position: relative;
-  top: -4px;
-}
-
-.list-package-details {
-  font-size: 11px;
-}
-
-.list-package-details > li {
-  background-color: #e6e6e6;
-  margin-bottom: 3px;
-}
-
-.not-found {
-  text-align: center;
-  font-size: 20px;
-  padding: 50px 0;
-  color: #7f7f7f;
-  font-weight: bold;
-}
-
-.twitter-badge-list-item {
-  position: relative;
-  top: 3px;
-}
-
-/* xs */
-@media (min-width: 0px) and (max-width: 767px) {
-  .branding {
-    font-size: 47px;
-  }
-  .header-subtitle {
-    font-size: 14px;
-  }
-
-  .description  {
-    word-wrap: break-word;
-    width: 270px;
-  }
-}
-
-/* sm */
-@media (min-width: 768px) and (max-width: 991px) {
-  .description  {
-    width: 220px;
-  }
-}
-
-/* md */
-@media (min-width: 992px) and (max-width: 1199px) {}
-
-/* lg */
-@media (min-width: 1200px) {}
-
-table.table-packages > thead > tr > th[data-ember-action] {
-  cursor: pointer;
-  white-space: nowrap;
-}
-table.table-packages > tbody > tr.hidden {
-  display: none;
-}
-
-img.-eic-loading, img.-eic-error {
-  display: none;
+.hidden {
+  display:none;
 }
