Make everything unbound

--- a/app/templates/components/em-avatar.hbs
+++ b/app/templates/components/em-avatar.hbs
@@ -1,2 +1,2 @@
-<a {{bind-attr href=npmURL}}><img {{bind-attr src=gravatar}}></a>
-<a {{bind-attr href=npmURL}}>{{user.name}}</a>
+<a href="{{unbound npmURL}}"><img src="{{unbound gravatar}}"></a>
+<a href="{{unbound npmURL}}">{{unbound user.name}}</a>
