--- a/app/templates/components/em-pkg.hbs
+++ b/app/templates/components/em-pkg.hbs
@@ -1,5 +1,5 @@
 <td>
-  <a {{bind-attr href=npmPackageURL}}>{{unbound name}}</a>
+  <a href="{{unbound npmPackageURL}}">{{unbound name}}</a>
   <br>
   {{unbound description}}
 </td>
