--- a/app/templates/components/em-avatar.hbs
+++ b/app/templates/components/em-avatar.hbs
@@ -1,2 +1,4 @@
-<a href="{{unbound npmURL}}"><img src="{{unbound gravatar}}"></a>
-<a href="{{unbound npmURL}}">{{unbound user.name}}</a>
+<a href="{{unbound npmURL}}">
+  <img src="{{unbound gravatar}}" class="gravatar">
+</a>
+{{em-owner-link user=user}}
