--- a/app/templates/components/em-pkg.hbs
+++ b/app/templates/components/em-pkg.hbs
@@ -1,14 +1,24 @@
-<td>
-  <a href="{{unbound npmPackageURL}}">{{unbound name}}</a>
-  <br>
-  {{unbound description}}
+<td class="cell-name">
+  <a href="{{unbound npmPackageURL}}"
+     target="_blank"
+     class="package-link">{{unbound split-prefix name}}</a>
+  {{em-is-new createdDate=created}}
+  <div class="description">
+    {{unbound description}}
+  </div>
+  <br class="visible-xs"><br class="visible-xs">
+  <ul class="list-inline visible-xs list-package-details">
+    <li>Owner: {{em-owner-link user=pkg._npmUser}}</li>
+    <li>Downloads: {{unbound digit-grouping downloads}}</li>
+    <li>Updated: {{unbound ago updated "LLLL"}}</li>
+  </ul>
 </td>
-<td>
+<td class="cell-gravatar hidden-xs">
   {{em-avatar user=pkg._npmUser}}
 </td>
-<td>
-  {{unbound downloads}}
+<td class="cell-downloads hidden-xs">
+  {{unbound digit-grouping downloads}}
 </td>
-<td>
-  {{unbound updated}}
+<td class="cell-updated hidden-xs">
+  {{unbound ago updated "LLLL"}}
 </td>
