--- a/app/templates/components/em-pkg.hbs
+++ b/app/templates/components/em-pkg.hbs
@@ -22,3 +22,6 @@
 <td class="cell-updated hidden-xs">
   {{unbound ago updated "LLLL"}}
 </td>
+<td class="cell-travis hidden-xs">
+  {{em-travis-badge github=github}}
+</td>
